# securebank-web-security-lab

./: .dockerignore  .editorconfig  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PROJECT_COMPLETION_CHECKLIST.md  README.md  RELEASE.md  SECURITY_NOTES.md  TESTING_REPORT.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  security_control.md
.github/workflows/: ci.yml  codeql.yml  zap-baseline.yml
docs/: development-guide.md  owasp-top-10-mapping.md  release-checklist.md  safety-scope.md  security-controls.md  testing-guide.md  threat-model.md  zap-review-policy.md
scripts/: README.md  check-docs.py  smoke-test.ps1  verify-docker.sh
src/securebank/: __init__.py  config.py  database.py  main.py  models.py  schemas.py  seed.py
src/securebank/audit/: __init__.py  service.py
src/securebank/auth/: routes.py  service.py
src/securebank/banking/: __init__.py  routes.py  service.py
src/securebank/security/: csrf.py  headers.py  passwords.py  sessions.py
src/securebank/static/css/: styles.css
src/securebank/templates/: base.html
src/securebank/templates/auth/: login.html  (+2 more)
tests/: __init__.py  conftest.py  test_access_control.py  test_audit_logging.py  test_auth.py  test_banking.py  test_csrf.py  test_docker_artifacts.py  test_documentation_consistency.py  test_owasp_mapping.py  test_passwords.py  test_scaffold.py  test_security_headers.py  test_sessions.py  test_settings.py  test_sql_injection_defenses.py  test_static_safety.py  test_xss_defenses.py
(+3 files in other folders)
