[project]
name = "securebank-web-security-lab"
version = "0.1.0"
description = "Fictional server-rendered banking web security lab for defensive secure software engineering practice."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "SecureBank Web Security Lab contributors" }
]
dependencies = [
  "argon2-cffi>=23.1.0",
  "fastapi>=0.111.0",
  "itsdangerous>=2.2.0",
  "jinja2>=3.1.4",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0.30",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/securebank"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "S"
]
ignore = [
  "S101",
  "S105",
  "S106"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
